--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,9 @@
   </head>
   <body>
     <form action="/" method="post">
-      <label></label>
+      <label>タスクの追加</label>
+      <input required type="text" name="add" placeholder="何をする?"/>
+      <input type="submit" value="追加"/>
     </form>
   </body>
 </html>
