DBへの保存、読み込み

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,10 @@
       <input required type="text" name="add" placeholder="何をする?"/>
       <input type="submit" value="追加"/>
     </form>
+    <ul>
+      <% for(let todo of todos){ %>
+      <li><span><%= todo.content %></span></li>
+      <% } %>
+    </ul>
   </body>
 </html>
